Added different background

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <head>
         <link rel="stylesheet" href="./style.css" />
         <title>Inventory!</title>
+        <link rel="icon" type="image/x-icon" href="https://freepngimg.com/thumb/warehouse/26951-6-warehouse-clipart.png">
     </head>
     <body>
 
