Changed the font on the site

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href="./style.css" />
         <title>Inventory!</title>
         <link rel="icon" type="image/x-icon" href="https://freepngimg.com/thumb/warehouse/26951-6-warehouse-clipart.png">
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+
     </head>
     <body>
 
