--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html>
     <head>
@@ -25,8 +24,19 @@
         <h2>Current Inventory:</h2>
         <div class="test">
         <div class="list">
+
         </div>
         </div>
+
+        <script>
+            const productForm = document.getElementById('productForm');
+            const productList = document.getElementById('productList');
+        
+            // Function to create a product item in the list
+            function createProductItem(product) {
+              const listItem = document.createElement
+            }
+        </script>
 
 </div>
 
@@ -35,3 +45,4 @@
         <script type="module" src="./react/index.js"></script>
     </body>
 </html>
+
