Started work on edit function

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,17 @@
         <h2>Current Inventory:</h2>
         <div class="test">
         <div class="list">
-
         </div>
         </div>
+        <h2>Edit an item by item ID</h2>
+        <form>
+            <input type="number" placeholder="ID" class="inputID" required>
+            <input type="text" placeholder="Name" class="inputName2" required>
+            <input type="text" placeholder="Description" class="inputDescription2" required>
+            <input type="text" placeholder="Category" class="inputCategory2" required>
+            <input type="number" placeholder="Price" class="inputPrice2" required>
+            <input type="submit" class="addButton2" value="Confirm Changes">
+        </form>
 
         <script>
             const productForm = document.getElementById('productForm');
