Added a back button to the edit item page

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 
 
 <div class="main">
-        <h1>Inventory Managment System!</h1>
+        <h1>Inventory Managment System</h1>
         <h3>Add item:</h3>
         <form>
-            <input type="text" placeholder="Name" class="inputName" required>
+            <input type="text" placeholder="Product Name" class="inputName" required>
             <input type="text" placeholder="Description" class="inputDescription" required>
             <input type="text" placeholder="Category" class="inputCategory" required>
             <input type="number" placeholder="Price" class="inputPrice" required>
@@ -32,15 +32,16 @@
 
 
 <div class="edit">
-    <h1>Inventory Managment System!</h1>
+    <h1>Inventory Managment System</h1>
     <h2>Edit an item by item ID</h2>
     <form>
         <input type="number" placeholder="ID" class="inputID" required>
-        <input type="text" placeholder="Name" class="inputName2" required>
+        <input type="text" placeholder="Product Name" class="inputName2" required>
         <input type="text" placeholder="Description" class="inputDescription2" required>
         <input type="text" placeholder="Category" class="inputCategory2" required>
         <input type="number" placeholder="Price" class="inputPrice2" required>
         <input type="submit" class="addButton2" value="Confirm Changes">
+        <input type="submit" class="back" value="Back">
     </form>
     </div>
 
